--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Hello 👋</h1>
+  <h1>Salut Maya 👋</h1>
   <p>This website is live.</p>
 </body>
 </html>
