--- a/index.html
+++ b/index.html
@@ -3,262 +3,75 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nourish — Salades en bocal</title>
-  <style>
-    :root{
-      --bg: #e3f4c4;
-      --text: #528f2c;
-      --card: rgba(255,255,255,0.55);
-      --stroke: rgba(82,143,44,0.25);
-    }
-
-    *{ box-sizing: border-box; }
-    body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      background: var(--bg);
-      color: var(--text);
-    }
-
-    a{ color: inherit; text-decoration: none; }
-
-    .container{ width:min(1120px, 92vw); margin:0 auto; }
-
-    /* Top nav */
-    .nav{
-      position: sticky;
-      top: 0;
-      backdrop-filter: blur(10px);
-      background: rgba(227,244,196,0.75);
-      border-bottom: 1px solid var(--stroke);
-      z-index: 10;
-    }
-    .nav-inner{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding: 14px 0;
-      gap: 16px;
-    }
-    .brand{
-      display:flex; align-items:center; gap:10px;
-      font-weight: 800; letter-spacing: 0.2px;
-    }
-    .dot{
-      width: 12px; height: 12px; border-radius: 99px;
-      background: var(--text);
-      box-shadow: 0 0 0 6px rgba(82,143,44,0.15);
-    }
-    .links{
-      display:flex; gap: 14px; flex-wrap: wrap;
-      font-weight: 600;
-      opacity: 0.95;
-    }
-    .links a{
-      padding: 8px 10px;
-      border-radius: 12px;
-      border: 1px solid transparent;
-    }
-    .links a:hover{
-      border-color: var(--stroke);
-      background: rgba(255,255,255,0.35);
-    }
-
-    /* Hero */
-    .hero{
-      padding: 54px 0 26px;
-    }
-    .hero-grid{
-      display:grid;
-      grid-template-columns: 1.15fr 0.85fr;
-      gap: 18px;
-      align-items: start;
-    }
-    .card{
-      background: var(--card);
-      border: 1px solid var(--stroke);
-      border-radius: 22px;
-      padding: 22px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
-    }
-    h1{
-      font-size: clamp(34px, 4.2vw, 52px);
-      line-height: 1.05;
-      margin: 6px 0 12px;
-    }
-    .subtitle{
-      font-size: 16px;
-      line-height: 1.5;
-      margin: 0 0 18px;
-      opacity: 0.95;
-      max-width: 62ch;
-    }
-    .pills{
-      display:flex; flex-wrap: wrap; gap: 10px;
-      margin-top: 14px;
-    }
-    .pill{
-      padding: 10px 12px;
-      border-radius: 999px;
-      border: 1px solid var(--stroke);
-      background: rgba(255,255,255,0.35);
-      font-weight: 700;
-      font-size: 13px;
-    }
-
-    /* Sections */
-    section{ padding: 18px 0 26px; }
-    .section-title{
-      display:flex; align-items: baseline; justify-content: space-between;
-      gap: 16px;
-      margin: 0 0 12px;
-    }
-    .section-title h2{
-      margin:0;
-      font-size: 22px;
-      letter-spacing: 0.2px;
-    }
-    .muted{
-      opacity: 0.85;
-      font-weight: 600;
-      font-size: 14px;
-    }
-
-    .media{
-      width: 100%;
-      border-radius: 18px;
-      border: 1px solid var(--stroke);
-      background: rgba(255,255,255,0.35);
-      overflow: hidden;
-    }
-    .media img{
-      width: 100%;
-      height: auto;
-      display:block;
-    }
-
-    .grid-2{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 16px;
-    }
-
-    /* Footer */
-    footer{
-      padding: 28px 0 44px;
-      border-top: 1px solid var(--stroke);
-      margin-top: 20px;
-    }
-
-    @media (max-width: 920px){
-      .hero-grid{ grid-template-columns: 1fr; }
-      .grid-2{ grid-template-columns: 1fr; }
-    }
-  </style>
+  <title>Nourish</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
-
 <body>
   <header class="nav">
     <div class="container nav-inner">
       <div class="brand">
-        <span class="dot"></span>
-        <span>Nourish</span>
+        <span class="dot"></span><span>Nourish</span>
       </div>
       <nav class="links">
-        <a href="#concept">Concept</a>
-        <a href="#salades">Salades</a>
-        <a href="#sauces">Sauces</a>
-        <a href="#machine">Machine</a>
-        <a href="#contact">Contact</a>
+        <a data-nav href="index.html">Accueil</a>
+        <a data-nav href="pages/concept.html">Concept</a>
+        <a data-nav href="pages/menu.html">Menu</a>
+        <a data-nav href="pages/machine.html">Machine</a>
+        <a data-nav href="pages/sauces.html">Sauces</a>
+        <a data-nav href="pages/contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
-    <section class="hero" id="concept">
-      <div class="hero-grid">
-        <div class="card">
-          <div class="muted">Salades fraîches • Prêtes à emporter • Bocaux réutilisables</div>
-          <h1>Des salades en bocal, dispo en 30 secondes.</h1>
-          <p class="subtitle">
-            Texte placeholder : explique ici le concept (fraîcheur, recettes gourmandes, retrait simple, retour des bocaux, etc.).
-            On remplira tout ça proprement ensuite.
-          </p>
-          <div class="pills">
-            <div class="pill">Recettes signatures</div>
-            <div class="pill">Sauces originales</div>
-            <div class="pill">Bocaux consignés</div>
-            <div class="pill">Vending machine</div>
+    <section class="section">
+      <div class="card">
+        <h1>Salades en bocal, prêtes en 30 secondes.</h1>
+        <p class="sub">Scroll vers le bas : la salade “grandit” / “rétrécit” comme une page Apple. Pour l’instant, on utilise la même photo partout (placeholder).</p>
+      </div>
+    </section>
+  </main>
+
+  <!-- Scroll Showcase -->
+  <section class="showcase" aria-label="Scroll showcase">
+    <div class="showcase-pin">
+      <div class="stage">
+        <div class="hero-visual">
+          <img id="saladHeroImg" src="assets/TransCaprese.png" alt="Salade (placeholder)" />
+        </div>
+
+        <div class="hero-copy">
+          <div class="kicker">Nos recettes</div>
+          <h2 class="title" id="saladTitle">Caprese fraîche</h2>
+          <p class="desc" id="saladDesc">Tomates, mozzarella, roquette. Simple, clean, efficace.</p>
+
+          <div class="dots" aria-label="Progression">
+            <span class="active"></span><span></span><span></span><span></span>
+          </div>
+
+          <div style="margin-top:18px" class="card">
+            <strong>Texte placeholder</strong><br/>
+            Ici on mettra plus tard : ingrédients, macros, prix, allergènes, etc.
           </div>
         </div>
+      </div>
+    </div>
+  </section>
 
-        <div class="media" aria-label="Aperçu des salades">
-          <img src="assets/Salades.png" alt="Aperçu des salades en bocal" />
-        </div>
-      </div>
-    </section>
-
-    <section id="salades">
-      <div class="section-title">
-        <h2>Les salades</h2>
-        <div class="muted">Texte placeholder • ingrédients / calories / prix</div>
-      </div>
-      <div class="media">
-        <img src="assets/Salades.png" alt="Sélection de salades en bocal" />
-      </div>
-    </section>
-
-    <section id="sauces">
-      <div class="section-title">
-        <h2>Les sauces</h2>
-        <div class="muted">Texte placeholder • 6 recettes</div>
-      </div>
-      <div class="media">
-        <img src="assets/Sauces.png" alt="Sélection de sauces en pots carton" />
-      </div>
-    </section>
-
-    <section id="machine">
-      <div class="section-title">
-        <h2>La machine</h2>
-        <div class="muted">Texte placeholder • localisation / fonctionnement</div>
-      </div>
-
-      <div class="grid-2">
-        <div class="media">
-          <img src="assets/Machine.png" alt="Machine à salades et réceptacle bocaux" />
-        </div>
-        <div class="card">
-          <h3 style="margin:0 0 10px; font-size:18px;">Comment ça marche</h3>
-          <ol style="margin:0; padding-left: 18px; line-height:1.6; font-weight:600;">
-            <li>Choisis ta salade</li>
-            <li>Ajoute une sauce</li>
-            <li>Paye (CB / sans contact)</li>
-            <li>Récupère en bas</li>
-            <li>Dépose le bocal usagé dans le réceptacle</li>
-          </ol>
-          <p style="margin:12px 0 0; opacity:0.9;">
-            Texte placeholder : parle de la consigne, du lavage, de la logistique, etc.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <div class="section-title">
-        <h2>Contact</h2>
-        <div class="muted">Texte placeholder</div>
-      </div>
+  <main class="container">
+    <section class="section">
       <div class="card">
-        <p style="margin:0; font-weight:600; opacity:0.95;">
-          Texte placeholder : email, formulaire, réseaux sociaux, etc.
-        </p>
+        <h2 style="margin:0 0 10px;">Suite de page (placeholder)</h2>
+        <p class="sub">On continuera ensuite avec : machine, sauces, localisations, etc.</p>
       </div>
     </section>
 
-    <footer>
-      <div class="muted">© Nourish — Texte placeholder</div>
+    <footer class="footer">
+      © Nourish — placeholder
     </footer>
   </main>
+
+  <script src="js/main.js"></script>
+  <script src="js/scrollshowcase.js"></script>
 </body>
 </html>
