--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,1 +1,37 @@
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nourish — Menu</title>
+  <link rel="stylesheet" href="../css/styles.css" />
+</head>
+<body>
+  <header class="nav">
+    <div class="container nav-inner">
+      <div class="brand"><span class="dot"></span><span>Nourish</span></div>
+      <nav class="links">
+        <a data-nav href="../index.html">Accueil</a>
+        <a data-nav href="concept.html">Concept</a>
+        <a data-nav href="menu.html">Menu</a>
+        <a data-nav href="machine.html">Machine</a>
+        <a data-nav href="sauces.html">Sauces</a>
+        <a data-nav href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
+  <main class="container">
+    <section class="section">
+      <div class="card">
+        <h1>Menu</h1>
+        <p class="sub">Placeholder. On mettra ici les 6 salades (plus tard vraies photos).</p>
+      </div>
+    </section>
+
+    <footer class="footer">© Nourish — placeholder</footer>
+  </main>
+
+  <script src="../js/main.js"></script>
+</body>
+</html>
