--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Nourish — Salades en bocal</title>
-
-  <!-- Main CSS -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Nourish</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-
-  <!-- =========================
-       HERO / INTRO
-  ========================== -->
   <section class="hero" id="hero">
-
     <div class="hero__copy">
       <p class="eyebrow">Salades en bocal</p>
       <h1 class="headline">Bien manger.<br>Instantanément.</h1>
@@ -27,88 +19,38 @@
     </div>
 
     <div class="hero__visual">
-      <img
-        id="heroImg"
-        class="hero__img"
-        src="./assets/TransCaprese.png"
-        alt="Salade en bocal Nourish"
-      />
+      <img id="heroImg" class="hero__img" src="./assets/TransCaprese.png" alt="Salade en bocal" />
     </div>
-
   </section>
 
-  <!-- =========================
-       CONCEPT
-  ========================== -->
   <section class="chapter">
     <div class="chapter__inner">
       <h2>Le concept</h2>
-      <p>
-        Nourish réinvente la pause déjeuner avec des salades en bocal
-        préparées chaque jour, conservées au frais et accessibles
-        en libre-service via des distributeurs nouvelle génération.
-      </p>
+      <p>Texte placeholder. On détaillera le parcours utilisateur.</p>
     </div>
   </section>
 
-  <!-- =========================
-       SALADES
-  ========================== -->
   <section class="chapter">
     <div class="chapter__inner">
       <h2>Les salades</h2>
-      <p>
-        Une gamme de recettes équilibrées, gourmandes et évolutives,
-        conçues pour s’adapter aux saisons et aux goûts de chacun.
-        (Contenu à venir)
-      </p>
+      <p>Texte placeholder. On mettra les 6 salades + infos nutrition.</p>
     </div>
   </section>
 
-  <!-- =========================
-       SAUCES
-  ========================== -->
   <section class="chapter">
     <div class="chapter__inner">
       <h2>Les sauces signature</h2>
-      <p>
-        Des sauces maison pensées pour sublimer chaque recette :
-        miel chaud & thym, miso citron vert, tomate rôtie balsamique…
-        (Contenu à venir)
-      </p>
+      <p>Texte placeholder. On liera sauce ↔ salade.</p>
     </div>
   </section>
 
-  <!-- =========================
-       MACHINE
-  ========================== -->
   <section class="chapter">
     <div class="chapter__inner">
-      <h2>Le distributeur</h2>
-      <p>
-        Un distributeur réfrigéré intelligent, design et éco-conçu,
-        capable de stocker plusieurs centaines de produits frais
-        tout en garantissant une expérience utilisateur fluide.
-        (Contenu à venir)
-      </p>
+      <h2>La machine</h2>
+      <p>Texte placeholder. On ajoutera les specs et le visuel.</p>
     </div>
   </section>
 
-  <!-- =========================
-       FOOTER
-  ========================== -->
-  <footer class="chapter">
-    <div class="chapter__inner">
-      <h2>Nourish</h2>
-      <p>
-        © Nourish — Tous droits réservés<br>
-        Site en cours de construction.
-      </p>
-    </div>
-  </footer>
-
-  <!-- Main JS -->
   <script src="./js/main.js"></script>
-
 </body>
 </html>
