--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="hero__visual">
-      <img id="heroImg" class="hero__img" src="./assets/TransCaprese.png" alt="Salade en bocal" />
+      <img id="heroImg" class="hero__img" src="./assets/SaladeTransHD.png" alt="Salade en bocal" />
     </div>
   </section>
 
